--- a/test.html
+++ b/test.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>나의 번지수</title>
-  <link rel="stylesheet" href="css/responsive.css" />
   <style>
     body {
-      font-family: 'Arial', sans-serif;
-      background: linear-gradient(to bottom, #ffecd2, #fcb69f);
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
+  font-family: 'Arial', sans-serif;
+  background: linear-gradient(to bottom, #e0f7f4, #c2f0ea);
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  text-align: center;
+}
 
     h1 {
       font-size: 2.2rem;
