--- a/question.html
+++ b/question.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>나의 감정 색상</title>
-  <link rel="stylesheet" href="css/responsive.css" />
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>나의 감정 색상</title>
+<link href="css/responsive.css" rel="stylesheet"/>
+<style>
     body {
   font-family: 'Arial', sans-serif;
   background: linear-gradient(to bottom, #e0f7f4, #c2f0ea);
@@ -56,67 +57,93 @@
   }
 </style>
 
-</style>
 </head>
 <body>
-  <h2>나의 감정을 색깔로 선택해줘</h2>
-  <form id="colorForm">
+<h2>나의 감정을 색깔로 선택해줘</h2>
+<form id="colorForm">
 <div class="question-block"><p>Q1. 지금 가장 마음이 끌리는 색은 무엇인가요?</p><div data-question="1">
-<span class="color-option" style="background:#ff9aa2" data-color="red" title="red"></span>
-<span class="color-option" style="background:#aec6cf" data-color="blue" title="blue"></span>
-<span class="color-option" style="background:#fff8b0" data-color="yellow" title="yellow"></span>
-<span class="color-option" style="background:#b5ead7" data-color="green" title="green"></span>
-<span class="color-option" style="background:#d5aae0" data-color="purple" title="purple"></span>
+<span class="color-option" data-color="red" style="background:#ff9aa2" title="red"></span>
+<span class="color-option" data-color="blue" style="background:#aec6cf" title="blue"></span>
+<span class="color-option" data-color="yellow" style="background:#fff8b0" title="yellow"></span>
+<span class="color-option" data-color="green" style="background:#b5ead7" title="green"></span>
+<span class="color-option" data-color="purple" style="background:#d5aae0" title="purple"></span>
 </div></div>
 <div class="question-block"><p>Q2. 요즘 나를 가장 편안하게 해주는 색은 무엇인가요?</p><div data-question="2">
-<span class="color-option" style="background:#ff9aa2" data-color="red" title="red"></span>
-<span class="color-option" style="background:#aec6cf" data-color="blue" title="blue"></span>
-<span class="color-option" style="background:#fff8b0" data-color="yellow" title="yellow"></span>
-<span class="color-option" style="background:#b5ead7" data-color="green" title="green"></span>
-<span class="color-option" style="background:#d5aae0" data-color="purple" title="purple"></span>
+<span class="color-option" data-color="red" style="background:#ff9aa2" title="red"></span>
+<span class="color-option" data-color="blue" style="background:#aec6cf" title="blue"></span>
+<span class="color-option" data-color="yellow" style="background:#fff8b0" title="yellow"></span>
+<span class="color-option" data-color="green" style="background:#b5ead7" title="green"></span>
+<span class="color-option" data-color="purple" style="background:#d5aae0" title="purple"></span>
 </div></div>
 <div class="question-block"><p>Q3. 앞으로 닮고 싶은 감정의 색은 무엇인가요?</p><div data-question="3">
-<span class="color-option" style="background:#ff9aa2" data-color="red" title="red"></span>
-<span class="color-option" style="background:#aec6cf" data-color="blue" title="blue"></span>
-<span class="color-option" style="background:#fff8b0" data-color="yellow" title="yellow"></span>
-<span class="color-option" style="background:#b5ead7" data-color="green" title="green"></span>
-<span class="color-option" style="background:#d5aae0" data-color="purple" title="purple"></span>
+<span class="color-option" data-color="red" style="background:#ff9aa2" title="red"></span>
+<span class="color-option" data-color="blue" style="background:#aec6cf" title="blue"></span>
+<span class="color-option" data-color="yellow" style="background:#fff8b0" title="yellow"></span>
+<span class="color-option" data-color="green" style="background:#b5ead7" title="green"></span>
+<span class="color-option" data-color="purple" style="background:#d5aae0" title="purple"></span>
 </div></div>
 <div class="question-block"><p>Q4. 스트레스를 받을 때 떠오르는 색은 무엇인가요?</p><div data-question="4">
-<span class="color-option" style="background:#ff9aa2" data-color="red" title="red"></span>
-<span class="color-option" style="background:#aec6cf" data-color="blue" title="blue"></span>
-<span class="color-option" style="background:#fff8b0" data-color="yellow" title="yellow"></span>
-<span class="color-option" style="background:#b5ead7" data-color="green" title="green"></span>
-<span class="color-option" style="background:#d5aae0" data-color="purple" title="purple"></span>
+<span class="color-option" data-color="red" style="background:#ff9aa2" title="red"></span>
+<span class="color-option" data-color="blue" style="background:#aec6cf" title="blue"></span>
+<span class="color-option" data-color="yellow" style="background:#fff8b0" title="yellow"></span>
+<span class="color-option" data-color="green" style="background:#b5ead7" title="green"></span>
+<span class="color-option" data-color="purple" style="background:#d5aae0" title="purple"></span>
 </div></div>
 <div class="question-block"><p>Q5. 현재 나의 감정과 가장 가까운 색은 무엇인가요?</p><div data-question="5">
-<span class="color-option" style="background:#ff9aa2" data-color="red" title="red"></span>
-<span class="color-option" style="background:#aec6cf" data-color="blue" title="blue"></span>
-<span class="color-option" style="background:#fff8b0" data-color="yellow" title="yellow"></span>
-<span class="color-option" style="background:#b5ead7" data-color="green" title="green"></span>
-<span class="color-option" style="background:#d5aae0" data-color="purple" title="purple"></span>
+<span class="color-option" data-color="red" style="background:#ff9aa2" title="red"></span>
+<span class="color-option" data-color="blue" style="background:#aec6cf" title="blue"></span>
+<span class="color-option" data-color="yellow" style="background:#fff8b0" title="yellow"></span>
+<span class="color-option" data-color="green" style="background:#b5ead7" title="green"></span>
+<span class="color-option" data-color="purple" style="background:#d5aae0" title="purple"></span>
 </div></div>
+<button style="padding: 20px 40px; font-size: 1.3rem; background-color: #ff6f61; color: white; border: none; border-radius: 10px; cursor: pointer;" type="submit">감정 유형 확인하기</button>
+</form>
 
-    <button type="submit" style="padding: 20px 40px; font-size: 1.3rem; background-color: #ff6f61; color: white; border: none; border-radius: 10px; cursor: pointer;">감정 유형 확인하기</button>
-  </form>
+
 <script>
   const selections = {};
   document.querySelectorAll("[data-question]").forEach(group => {
     group.addEventListener("click", e => {
-      if (!e.target.dataset.color) return;
+      if (!e.target.classList.contains("color-option")) return;
       const question = group.dataset.question;
       group.querySelectorAll(".color-option").forEach(el => el.classList.remove("selected"));
       e.target.classList.add("selected");
       selections[question] = e.target.dataset.color;
     });
   });
+
   document.getElementById("colorForm").addEventListener("submit", e => {
     e.preventDefault();
-    if (Object.keys(selections).length < 5) return alert("모든 질문에 답해주세요!");
-    const counts = {}; Object.values(selections).forEach(c => counts[c] = (counts[c] || 0) + 1);
-    const result = Object.keys(counts).reduce((a,b) => counts[a] > counts[b] ? a : b);
-    location.href = "result.html?emotion=" + result;
+    if (Object.keys(selections).length < 5) {
+      alert("모든 질문에 답해주세요!");
+      return;
+    }
+
+    const colorCounts = { red: 0, blue: 0, yellow: 0, green: 0, purple: 0 };
+    Object.values(selections).forEach(color => {
+      if (color in colorCounts) colorCounts[color]++;
+    });
+
+    let maxColor = "yellow";
+    let maxCount = 0;
+    for (const color in colorCounts) {
+      if (colorCounts[color] > maxCount) {
+        maxColor = color;
+        maxCount = colorCounts[color];
+      }
+    }
+
+    const colorPageMap = {
+      red: "result_red.html",
+      blue: "result_blue.html",
+      yellow: "result_yellow.html",
+      green: "result_green.html",
+      purple: "result_purple.html"
+    };
+    const page = colorPageMap[maxColor] || "result.html";
+    window.location.href = page;
   });
 </script>
+
 </body>
 </html>
